# QwenASRGUI

./: QWENASRGUI.py  pyproject.toml
qml/: App.qml
qml/Component/: FluentTitleBar.qml  ModelLoadPrompt.qml  PageScrollContent.qml  SidebarPageLayout.qml  StatTile.qml  StatusChip.qml  SurfaceCard.qml
qml/Global/: ImagePath.qml  qmldir
qml/Page/: Align.qml  Log.qml  Settings.qml  Transcription.qml
scripts/: download_model.py
src/: app_container.py
src/application/: __init__.py  app_state.py  composition_root.py  file_support.py  log_store.py  settings_store.py  shared_model_runtime.py
src/application/use_cases/: __init__.py  alignment.py  export_text.py  transcription.py
src/common/: __init__.py  asr_interface.py  breakline_algorithm.py  media_handler.py  system_handler.py
src/common/asr/: __init__.py  interface.py  model_holder.py  service.py
src/core/: paths.py  vo.py
src/infrastructure/qt/: __init__.py  clipboard.py  file_dialogs.py
src/model/: __init__.py  asr.py  media.py  subtitles.py  system.py  value_objects.py
src/service/: __init__.py  alignment_service.py  application_service.py  log_service.py  service_utils.py  settings_service.py  transcription_service.py
src/utils/: hardware.py  memory_limit.py  singleton.py
src/viewmodel/: __init__.py  alignment_viewmodel.py  log_viewmodel.py  page_states.py  settings_viewmodel.py  transcription_viewmodel.py
