[project]
name = "qwenasrgui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "loguru>=0.7.3",
    "modelscope>=1.34.0",
    "pyside6>=6.10.1",
    "qwen-asr>=0.0.6",
    "torch>=2.10.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
